tests/generics/async_nested.diag
async_nested.ax:1:1: error: await requires Future[T], found 0
async_nested.ax:1:1: error: await requires Future[T], found 0
