tests/generics/async_nested.ax
async fn inner() -> i32:
    return 10

async fn outer() -> i32:
    let x = await inner()
    return x

async fn main():
    let r = await outer()
